# CoProx

./: .gitignore  IMPLEMENTACION_PROXY_CONTROLLER.md  PLAN_MODELOS.md  README.md  Registro de tickets.md  pyproject.toml  pytest.ini
src/: main.py
src/controllers/: app_controller.py  auth_controller.py  backup_controller.py  proxy_controller.py
src/models/: auth_model.py  backup_model.py  config_model.py  proxy_model.py
src/services/: android_service.py  file_service.py  http_service.py  oauth_service.py
src/views/: flet_app.py
src/views/android/: notification_view.py
src/views/components/: auth_view.py  backup_view.py  proxy_view.py
tests/: conftest.py
tests/unit/test_controllers/: test_auth_controller.py  test_backup_controller.py  test_proxy_controller.py
tests/unit/test_models/: test_auth_model.py  test_backup_model.py  test_config_model.py  test_proxy_model.py
